 • Maverick +7% hp (from 1300 to 1400hp)
 • Storm Rocko Thud Hammer : torso speed rotation increased

Other:
 • Fixed: popup units wont start targeting unless enemy is within weapon range
 • Fixed: continuous aiming change always being able to fire, even when turret was way off
 • Added: Options > Game > '   include builders' .. in area-selection, you can disable to exclude builders
 • Added widget: "DGun no ground enemy", mainly to prevent snap dgun on close raiding units (default disabled)
 • Added option: nano effect: beam or particles (old effect)
 • Added lights to laser hits, barrel fire, air thrusters, nano beams and fusion balls
 • Made Anti Aliasing options slider work again, and limited max value of 4 (MSAA is used instead of FSAA)
 • New flak explosion effect + custom crashing airplane smoke trails
 • Removed dgun range circle when enemy com gets near
 • Reduced footprint of engine replacement trees + tree fire wont spread as wildly
 • Resized and tuned proportions of BAR (remodeled) units to match their BA counterparts more (modoption barmodels)
 • Added option: "Icon scale"
 • Auto sets 10000 particles as minimum


10.12 -> 10.13
29/09/2018

Balance:
 • Reverted the global 10% reclaimspeed nerf (see 10.00)

Other:
 • Fixed "Set Target Default" erroring at game start
 • Fixed some missing water-splash effects
 • Fixed: The new "Contain mouse" option should show up in the options this time
 • Fixed: Auto disabling map widgets: *Mearth Location Tags*1.0 (render errors) and "Ambient player" (DsD v8)


10.11 -> 10.12
16/09/2018

IMPORTANT: Removed support for older engine versions, use 104.0.1.567 or newer.

Balance:
 • Testing splitting ballistic missiles for T2 missile ships (splits into 6 (arm) or 8(core) projectiles)
 • Continuous aiming: units readjust their aim much more often + start aiming when enemy is still at maxrange + 10%
 • EMP spider auto heals itself with 15hp per second (ba9.37 had 30 before it was removed)