@@ -1,12 +1,12 @@
 function widget:GetInfo()
     return {
-        name      = "Passive builders", --v5
+        name      = "Passive builders",
         desc      = "Allows to set builders (nanos, labs and cons) on passive mode",
         author    = "[teh]decay",
         date      = "20 aug 2015",
         license   = "GNU GPL, v2 or later",
         layer     = 0,
-        version   = 5,
+        version   = 6,
         enabled   = true  -- loaded by default
     }
 end
@@ -18,10 +18,9 @@ end
 -- v3 [teh]decay exclude Commando from "passive" builders
 -- v4 [teh]decay add ability to select which builders to put on passive mode: nanos, cons, labs
 -- v5 [teh]Flow restyled + relative position + bugfix
+-- v6 [teh]Flow removed GUI, options widget handles that part now
 
 -- some code was used from "Wind Speed" widget. Thx to Jazcash and Floris!
-
-local bgcorner = "LuaUI/Images/bgcorner.png"
 
 local CMD_PASSIVE       	= 34571
 local spGetMyTeamID     	= Spring.GetMyTeamID
@@ -31,28 +30,11 @@ local spGiveOrderToUnit 	= Spring.GiveOrderToUnit
 local spGetMyPlayerID		= Spring.GetMyPlayerID
 local spGetPlayerInfo		= Spring.GetPlayerInfo
 
-local glTexRect				= gl.TexRect
-local glText				= gl.Text
-local glTexture				= gl.Texture
-local glColor				= gl.Color
-local glPushMatrix			= gl.PushMatrix
-local glPopMatrix			= gl.PopMatrix
-local glTranslate			= gl.Translate
-
 local coreCommando = UnitDefNames["cormando"]
 
 local passiveLabs = false;
 local passiveNanos = true;
 local passiveCons = false;
-
-local xRelPos, yRelPos		= 0.7, 0.7	-- (only used here for now)
-local vsx, vsy				= gl.GetViewSizes()
-local xPos, yPos            = xRelPos*vsx, yRelPos*vsy
-
-local panelWidth = 105;
-local panelHeight = 95;
-
-local sizeMultiplier = 1
 
 local function isBuilder(ud)
     if not passiveCons and not passiveLabs and not passiveNanos then
@@ -98,151 +80,6 @@ local function activateBuilder(unitID)
     spGiveOrderToUnit(unitID, CMD_PASSIVE, {0}, {})
 end
 
-function widget:DrawScreen()
-    -- do not delete this method or "widget:TweakDrawScreen()" will not be called
-    
-    if (WG['guishader_api'] ~= nil) then
-        WG['guishader_api'].RemoveRect('passivebuilders')
-    end
-end
-
-
-function widget:TweakDrawScreen()
-	if not Spring.GetSpectatingState() then
-		glColor(0, 0, 0, 0.6)
-		RectRound(xPos, yPos, xPos + (panelWidth*sizeMultiplier), yPos + (panelHeight*sizeMultiplier), 8*sizeMultiplier)
-		glColor(1, 1, 1, 1)
-		glText("Passive mode", xPos + (10*sizeMultiplier), yPos + (76*sizeMultiplier), 13*sizeMultiplier, "n")
-		glColor(1, 1, 1, 0.2)
-		drawCheckbox(xPos + (12*sizeMultiplier), yPos + (10*sizeMultiplier), passiveCons,  "cons")
-		drawCheckbox(xPos + (12*sizeMultiplier), yPos + (30*sizeMultiplier), passiveNanos, "nanos")
-		drawCheckbox(xPos + (12*sizeMultiplier), yPos + (50*sizeMultiplier), passiveLabs,  "labs")
-		processGuishader()
-	end
-end
-
-
-local function DrawRectRound(px,py,sx,sy,cs)
-	gl.TexCoord(0.8,0.8)
-	gl.Vertex(px+cs, py, 0)
-	gl.Vertex(sx-cs, py, 0)
-	gl.Vertex(sx-cs, sy, 0)
-	gl.Vertex(px+cs, sy, 0)
-	
-	gl.Vertex(px, py+cs, 0)
-	gl.Vertex(px+cs, py+cs, 0)
-	gl.Vertex(px+cs, sy-cs, 0)
-	gl.Vertex(px, sy-cs, 0)
-	
-	gl.Vertex(sx, py+cs, 0)
-	gl.Vertex(sx-cs, py+cs, 0)
-	gl.Vertex(sx-cs, sy-cs, 0)
-	gl.Vertex(sx, sy-cs, 0)
-	
-	local offset = 0.07		-- texture offset, because else gaps could show
-	local o = offset
-	-- top left
-	--if py <= 0 or px <= 0 then o = 0.5 else o = offset end
-	gl.TexCoord(o,o)
-	gl.Vertex(px, py, 0)
-	gl.TexCoord(o,1-o)
-	gl.Vertex(px+cs, py, 0)
-	gl.TexCoord(1-o,1-o)
-	gl.Vertex(px+cs, py+cs, 0)
-	gl.TexCoord(1-o,o)
-	gl.Vertex(px, py+cs, 0)
-	-- top right
-	--if py <= 0 or sx >= vsx then o = 0.5 else o = offset end
-	gl.TexCoord(o,o)
-	gl.Vertex(sx, py, 0)
-	gl.TexCoord(o,1-o)
-	gl.Vertex(sx-cs, py, 0)
-	gl.TexCoord(1-o,1-o)
-	gl.Vertex(sx-cs, py+cs, 0)
-	gl.TexCoord(1-o,o)
-	gl.Vertex(sx, py+cs, 0)
-	-- bottom left
-	--if sy >= vsy or px <= 0 then o = 0.5 else o = offset end
-	gl.TexCoord(o,o)
-	gl.Vertex(px, sy, 0)
-	gl.TexCoord(o,1-o)
-	gl.Vertex(px+cs, sy, 0)
-	gl.TexCoord(1-o,1-o)
-	gl.Vertex(px+cs, sy-cs, 0)
-	gl.TexCoord(1-o,o)
-	gl.Vertex(px, sy-cs, 0)
-	-- bottom right
-	--if sy >= vsy or sx >= vsx then o = 0.5 else o = offset end
-	gl.TexCoord(o,o)
-	gl.Vertex(sx, sy, 0)
-	gl.TexCoord(o,1-o)
-	gl.Vertex(sx-cs, sy, 0)
-	gl.TexCoord(1-o,1-o)
-	gl.Vertex(sx-cs, sy-cs, 0)
-	gl.TexCoord(1-o,o)
-	gl.Vertex(sx, sy-cs, 0)
-end
-
-
-function RectRound(px,py,sx,sy,cs)
-	local px,py,sx,sy,cs = math.floor(px),math.floor(py),math.ceil(sx),math.ceil(sy),math.floor(cs)
-	
-	gl.Texture(bgcorner)
-	gl.BeginEnd(GL.QUADS, DrawRectRound, px,py,sx,sy,cs)
-	gl.Texture(false)
-end
-
-function drawCheckbox(x, y, state, text)
-    glPushMatrix()
-    glTranslate(x, y, 0)
-    glColor(1, 1, 1, 0.2)
-    RectRound(0, 0, 16*sizeMultiplier, 16*sizeMultiplier, 3*sizeMultiplier)
-    glColor(1, 1, 1, 1)
-    if state then
-        glTexture('LuaUI/Images/tick.png')
-        glTexRect(0, 0, 16*sizeMultiplier, 16*sizeMultiplier)
-        glTexture(false)
-    end
-    glText(text, 23*sizeMultiplier, 4*sizeMultiplier, 12*sizeMultiplier, "n")
-    glPopMatrix()
-end
-
-
-function widget:TweakMousePress(mx, my, mb)
-	if not Spring.GetSpectatingState() then
-		if (mb == 2 or mb == 3) and mx > xPos and my > yPos and mx < xPos + (panelWidth*sizeMultiplier) and my < yPos + (panelHeight*sizeMultiplier) then
-			return true
-		end
-
-		if mb == 1 then
-			if mb == 1 then
-				if mx > xPos + (12*sizeMultiplier) and my > yPos + (10*sizeMultiplier) and mx < (xPos + ((panelWidth-12)*sizeMultiplier)) and my < (yPos + ((10 + 16)*sizeMultiplier)) then
-					passiveCons = not passiveCons
-					refreshUints()
-				elseif mx > xPos + (12*sizeMultiplier) and my > yPos + (30*sizeMultiplier) and mx < (xPos + ((panelWidth-12)*sizeMultiplier)) and my < (yPos + ((30 + 16)*sizeMultiplier)) then
-					passiveNanos = not passiveNanos
-					refreshUints()
-				elseif mx > xPos + (12*sizeMultiplier) and my > yPos + (50*sizeMultiplier) and mx < (xPos + ((panelWidth-12)*sizeMultiplier)) and my < (yPos + ((50 + 16)*sizeMultiplier)) then
-					passiveLabs = not passiveLabs
-					refreshUints()
-				end
-			end
-		end
-	end
-end
-
-function widget:TweakMouseMove(mx, my, dx, dy)
-	if not Spring.GetSpectatingState() then
-		if xPos + dx >= -1 and xPos + (panelWidth*sizeMultiplier) + dx - 1 <= vsx then
-			xRelPos = xRelPos + dx/vsx
-		end
-		if yPos + dy >= -1 and yPos + (panelHeight*sizeMultiplier) + dy - 1<= vsy then 
-			yRelPos = yRelPos + dy/vsy
-		end
-		xPos, yPos = xRelPos * vsx,yRelPos * vsy
-	end
-end
-
 function widget:UnitCreated(unitID, unitDefID, unitTeam)
     if (unitTeam ~= spGetMyTeamID()) then
         return
@@ -271,7 +108,6 @@ function widget:GetConfigData()
         passiveLabs = passiveLabs,
         passiveNanos = passiveNanos,
         passiveCons = passiveCons,
-        xRelPos = xRelPos, yRelPos = yRelPos
     }
 end
 
@@ -294,17 +130,10 @@ function widget:SetConfigData(data)
         passiveCons = false
     end
 
-    if data.xRelPos ~= nil then
-		xRelPos = data.xRelPos or xRelPos
-		yRelPos = data.yRelPos or yRelPos
-		xPos = xRelPos * vsx
-		yPos = yRelPos * vsy
-    end
-
-    refreshUints()
+    refreshUnits()
 end
 
-function refreshUints()
+function refreshUnits()
     local _, _, spec, _ = spGetPlayerInfo(spGetMyPlayerID())
     if spec then
         return
@@ -327,17 +156,6 @@ function refreshUints()
     end
 end
 
-function processGuishader()
-    if (WG['guishader_api'] ~= nil) then
-        WG['guishader_api'].InsertRect(xPos, yPos, xPos + (panelWidth*sizeMultiplier), yPos + (panelHeight*sizeMultiplier), 'passivebuilders')
-    end
-end
-
-function widget:ViewResize(viewSizeX, viewSizeY)
-	vsx, vsy = viewSizeX, viewSizeY
-	xPos, yPos = xRelPos*vsx, yRelPos*vsy
-	sizeMultiplier = 0.55 + (vsx*vsy / 8000000)
-end
 
 function widget:PlayerChanged(playerID)
     if Spring.GetSpectatingState() then
@@ -349,6 +167,29 @@ function widget:Initialize()
     if Spring.IsReplay() or Spring.GetGameFrame() > 0 then
         widget:PlayerChanged()
     end
+
+    WG['passivebuilders'] = {}
+    WG['passivebuilders'].getPassiveNanos = function()
+        return passiveNanos
+    end
+    WG['passivebuilders'].setPassiveNanos = function(value)
+        passiveNanos = value
+        refreshUnits()
+    end
+    WG['passivebuilders'].getPassiveLabs = function()
+        return passiveLabs
+    end
+    WG['passivebuilders'].setPassiveLabs = function(value)
+        passiveLabs = value
+        refreshUnits()
+    end
+    WG['passivebuilders'].getPassiveCons = function()
+        return passiveCons
+    end
+    WG['passivebuilders'].setPassiveCons = function(value)
+        passiveCons = value
+        refreshUnits()
+    end
 end
 
 function widget:GameStart()
@@ -356,8 +197,6 @@ function widget:GameStart()
 end
 
 function widget:Shutdown()
-    if (WG['guishader_api'] ~= nil) then
-        WG['guishader_api'].RemoveRect('passivebuilders')
-    end
+    WG['passivebuilders'] = nil
 end
 
